--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
 
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 
@@ -83,191 +83,301 @@ th {
 
 body {
 	min-height: 100vh;
-	font-family: "Raleway", sans-serif;
-	background-color: hsl(229, 57%, 11%);
-	background-image: url("https://raw.githubusercontent.com/Deepali25-K/fylo-data-storage-component/main/images/bg-mobile.png");
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: hsla(0, 0%, 100%, 0.8);
-	font-size: 0.8rem;
+	font-family: "Bai Jamjuree", sans-serif;
+	font-size: 1.125rem; /*18px*/
+	background-color: white;
+	color: hsl(210, 10%, 33%);
+}
+
+section,
+.buttons,
+.tools,
+dl,
+.flexbox,
+footer,
+footer div:first-child {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 }
 
-.first-box,
-.second-box {
-	border-radius: 10px;
-	padding: 2rem;
-	background-color: hsl(228, 56%, 26%);
-	margin: 2rem 0;
-	width: 20rem;
+section {
+	padding: 0 0.9rem 0;
+	text-align: center;
+	gap: 1rem;
 }
 
-.second-box {
-	position: relative;
+section:first-child {
+	padding-top: 6rem;
+}
+
+section:nth-child(2) {
+	padding: 5rem 0.9rem 0;
+}
+
+section:nth-child(4) {
+	padding: 10rem 0.9rem;
+}
+
+section a {
+	margin-bottom: 2.5rem;
+}
+
+h1,
+h2 {
+	font-weight: 600;
+	font-size: 2rem;
+}
+
+p,
+dd {
+	line-height: 1.8rem;
+	color: hsl(201, 11%, 66%);
+	margin-bottom: 2rem;
+}
+
+.buttons {
+	gap: 1.2rem;
+}
+
+button {
+	border: none;
+	color: white;
+	width: 20rem;
+	padding: 1.2rem 1rem;
+	border-radius: 2rem;
+	cursor: pointer;
+	font-size: 1.2rem;
+}
+
+button:first-child {
+	background-color: hsl(171, 66%, 44%);
+}
+
+button:last-child {
+	background-color: hsl(233, 100%, 69%);
+}
+
+button:hover {
+	opacity: 0.8;
+	transition: ease-out 0.2s;
+}
+
+.tools {
+	gap: 1.5rem;
+}
+
+dt,
+dd p:first-child {
+	font-weight: 600;
+	font-size: 1.6rem;
+}
+
+dd p:first-child {
+	color: hsl(210, 10%, 33%);
+}
+
+dl {
+	margin-bottom: 10rem;
+}
+
+.flexbox {
+	gap: 4rem;
+}
+
+.image {
+	margin: 2rem 0;
+}
+
+dd {
+	margin-bottom: 3rem;
+}
+
+footer {
+	padding: 4rem 4rem;
+	width: 100vw;
+	background-color: hsl(201, 11%, 96%);
+	gap: 2rem;
 	text-align: center;
 }
 
-.second-box span {
-	font-weight: 700;
+.logo {
+	height: 4rem;
 }
 
-.data-box {
-	border-radius: 0.8rem;
-	font-size: 2.4rem;
-	font-weight: 700;
-	position: absolute;
-	background-color: white;
-	color: hsl(229, 57%, 11%);
-	padding: 0.9rem 1.5rem;
-	bottom: -2rem;
-	right: 5.5rem;
+footer a {
+	text-decoration: none;
 }
 
-.data-box p {
-	display: flex;
-	gap: 0.5rem;
-	align-items: center;
-	justify-content: center;
+footer ul li {
+	font-size: 1.2rem;
+	margin-bottom: 2rem;
 }
 
-.data-box span {
-	color: hsl(229, 7%, 55%);
-	font-size: 0.72rem;
+footer ul li a {
+	color: hsl(210, 10%, 33%);
 }
 
-.fylo-icons {
-	display: flex;
-	gap: 1rem;
-	align-items: center;
-	justify-content: flex-start;
-	margin: 1.8rem 0 0.7rem;
-}
-
-.fylo-icons img {
-	padding: 0.7rem 0.9rem;
-	border-radius: 0.8rem;
-	background-color: hsl(229, 57%, 11%);
-}
-
-.fylo-icons img:nth-child(2) {
-	padding: 0.825rem 0.75rem;
-}
-
-.fylo-icons img:nth-child(3) {
-	padding: 0.95rem 0.75rem;
-}
-
-.first-box {
-	border-top-right-radius: 6rem;
-}
-
-.bar {
+footer div {
 	display: flex;
 	align-items: center;
-	position: relative;
-	height: 1.2rem;
-	width: 100%;
-	border-radius: 12px;
-	margin: 1rem 0 0.8rem;
-	background-color: hsla(229, 57%, 11%, 0.5);
+	gap: 2.5rem;
 }
 
-.bar:before {
-	position: absolute;
-	content: "";
-	width: 70%;
-	height: 0.8rem;
-	background-image: linear-gradient(
-		to right,
-		hsl(6, 100%, 80%),
-		hsl(335, 100%, 65%)
-	);
-	border-radius: 40px;
-	left: 0.25rem;
-}
+/*-- MEDIA QUERIES --*/
 
-.bar:after {
-	content: "";
-	position: absolute;
-	width: 0.6rem;
-	height: 0.6rem;
-	border-radius: 50%;
-	background-color: white;
-	right: 4.7rem;
-}
+@media (min-width: 380px) {
+	section {
+		padding: 0 1rem 0;
+	}
 
-.second-box div:nth-child(3) {
-	font-size: 0.8rem;
-	font-weight: 700;
-	margin-bottom: 1rem;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-/* MEDIA QUERIES */
-
-@media (min-width: 700px) {
-	body {
-		background-image: url("https://raw.githubusercontent.com/Deepali25-K/fylo-data-storage-component/main/images/bg-desktop.png");
-		background-repeat: no-repeat;
-		background-size: 100%;
-		background-position: bottom;
+	p {
+		max-width: 44rem;
 	}
 }
 
-@media (min-width: 1000px) {
-	main {
-		gap: 2rem;
-		display: flex;
+@media (min-width: 1024px) {
+	section:first-child {
+		padding: 10rem 0 6rem;
+	}
+
+	h1 {
+		font-size: 3rem;
+	}
+
+	.buttons {
 		flex-direction: row;
-		align-items: flex-end;
+		gap: 1rem;
 	}
 
-	.first-box {
-		padding: 2.5rem;
-		width: 22rem;
+	button {
+		width: 15rem;
+		padding: 0.9rem;
 	}
 
-	.second-box {
-		padding: 2.5rem;
-		width: 34rem;
+	.snippet-tracking {
+		padding-right: 2rem;
+		display: flex;
+		justify-content: flex-end;
+		gap: 3.5rem;
+		text-align: left;
+		margin-bottom: 10rem;
+	}
+
+	.snippet-tracking img {
+		width: 80%;
+		margin-left: -2.4rem;
+	}
+
+	.snippet-tracking dl {
+		align-items: flex-start;
+	}
+
+	.snippet-tracking dl {
+		margin-bottom: 0;
+	}
+
+	.snippet-tracking dd {
+		max-width: 30rem;
+	}
+
+	.about dl {
+		align-items: flex-start;
+	}
+
+	.tools {
+		flex-direction: row;
+		align-items: flex-start;
+	}
+
+	.tools div {
+		width: 20rem;
+	}
+
+	.tools dt {
+		height: 4rem;
+	}
+
+	.tools div p {
+		width: 100%;
+	}
+
+	.flexbox {
+		flex-direction: row;
+	}
+
+	footer {
+		flex-direction: row;
+		justify-content: space-between;
 		text-align: left;
 	}
 
-	.second-box div:nth-child(3) {
-		margin-bottom: 0;
+	footer div:first-child {
+		flex-direction: row;
 	}
 
-	.fylo-icons {
-		margin-bottom: 0;
+	footer ul {
+		width: 35rem;
+		height: 5rem;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		justify-content: center;
 	}
 
-	.data-box {
-		right: 2.5rem;
-		bottom: 8.5rem;
-		padding: 0.8rem 1.5rem;
+	ul li:nth-child(2) {
+		grid-column: 1;
+		grid-row: 2 / 2;
 	}
 
-	.data-box::after {
-		content: "";
-		display: block;
-		position: absolute;
-		right: 0;
-		bottom: -1rem;
-		border-width: 1.8rem;
-		border-style: solid;
-		border-color: transparent white transparent transparent;
+	ul li:nth-child(4) {
+		grid-column: 2;
+		grid-row: 2 / 2;
+	}
+	ul li:nth-child(5) {
+		grid-column: 3;
+		grid-row: 1 / 1;
+	}
+}
+
+@media (min-width: 1200px) {
+	.main p {
+		font-size: 1.2rem;
 	}
 
-	.data-box span {
-		font-size: 0.85rem;
+	.about h1,
+	h2,
+	body section:last-of-type h1 {
+		font-size: 2.5rem;
+	}
+}
+
+@media (min-width: 1440px) {
+	.snippet-tracking img {
+		margin-left: -6rem;
 	}
 
-	.bar:after {
-		right: 8.6rem;
+	.snippet-tracking {
+		gap: 8rem;
+	}
+
+	.tools div {
+		width: 25rem;
+	}
+
+	.flexbox {
+		gap: 6.5rem;
+	}
+
+	footer {
+		padding: 2.5rem 8rem;
+	}
+
+	footer div {
+		gap: 2rem;
+	}
+
+	footer ul {
+		margin-left: 8rem;
 	}
 }
